# mtk

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  main.cpp
include/mtk/: app.h  box.h  canvas.h  color.h  group.h  point.h  rect.h  size.h  util.h  widget.h  window.h
include/mtk/driver/: graphics_driver.h  system_driver.h  window_driver.h
src/: app.cpp  canvas.cpp  group.cpp  rect.cpp  util.cpp  widget.cpp  window.cpp
src/driver/gdi/: gdi_graphics_driver.cpp
src/driver/gdiplus/: gdiplus_graphics_driver.cpp  gdiplus_graphics_driver.h
src/driver/windows/: win32.cpp  win32.h  windows_system_driver.cpp  windows_window_driver.cpp
